src/objects/Scenarios__c.object
<CustomObject>
    <description>PMO: Test Scenarios.</description>
    <fields>
        <fullName>Author_SSO_Id__c</fullName>
        <externalId>true</externalId>
        <label>Author (SSO ID)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <picklist>
            <picklistValues>
                <fullName>DI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User and Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_Description__c</fullName>
        <label>Scenario Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft Ready</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Acceptance_Criteria__c</fullName>
        <inlineHelpText>Acceptance Criteria for the overall Test Scenario</inlineHelpText>
        <label>Test Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Objective__c</fullName>
        <inlineHelpText>Objective of the overall  Test scenario</inlineHelpText>
        <label>Test Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Run__c</fullName>
        <label>Test Run</label>
        <referenceTo>Test_Run__c</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Scenarios</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Scenario_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Scenario #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>